2014-07-01  Glenn Morris  <rgm@gnu.org>

	* vc/log-edit.el (log-edit-hook): Add missing :version.

2014-07-01  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-indent-post-self-insert-function):
	Enhancements to electric indentation behavior inside
	parens. (Bug#17658)

2014-07-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ps-def.el (ps-generate-postscript-with-faces1): Don't mess with
	buffer-invisibility-spec (bug#17867).

2014-06-29  Andreas Schwab  <schwab@linux-m68k.org>

	* vc/vc-git.el (vc-git-checkin): When operating on the whole tree
	pass "-a".

2014-06-29  Glenn Morris  <rgm@gnu.org>

	* cus-edit.el (help):
	* finder.el (finder-known-keywords):
	* help.el (help-for-help-internal):
	* vc/ediff-mult.el (ediff-meta-buffer-verbose-message)
	(ediff-redraw-registry-buffer):
	* vc/ediff-ptch.el (ediff-patch-file-internal):
	Doc fixes re "online" help.  (Bug#17803)

	* progmodes/idlwave.el (idlwave): Update url-link for custom group.
	(idlwave-mode): Doc URL update.

2014-06-27  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-set-top-priorities): Fix logic to
	account for file-wide setting of todo-top-priorities-overrides.
	Make code a bit cleaner.

2014-06-27  Leo Liu  <sdl.web@gmail.com>

	* calc/calc.el (math-bignum): Handle most-negative-fixnum.  (Bug#17556)

2014-06-27  Glenn Morris  <rgm@gnu.org>

	* net/eww.el (eww-mode) <eww-current-title>: Make local.  (Bug#17860)

2014-06-26  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-prefix-overlays): If there is no
	category-wide setting of todo-top-priorities-overrides, check for
	a file-wide setting and fontify accordingly.

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* subr.el (read-passwd): Warn about batch mode.  (Bug#17839)

2014-06-26  Daiki Ueno  <ueno@gnu.org>

	* emacs-lisp/package.el (package--check-signature):
	If package-check-signature is allow-unsigned, don't signal error when